--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -66,8 +66,6 @@ logging:
 #        web:
 #          trace
 
-application:
-  formatted-version: 1.0.0
 
 shiro:
   userNativeSessionManager: true
@@ -79,4 +77,9 @@ mail:
     username: 847064370@qq.com
     password: vtvhcjsacnuubdaj
   from:
-    name: 初云博客
+    name: Easy Java
+
+application:
+  version: 1.0.1
+#  staticCdnUrl: http://chuyun-cdn.liuyanzhao.com
+  staticCdnUrl:
